Mejora el la seguridad de la aplicacion