@@ -1,10 +1,13 @@
 package com.blog.proyecto_blog.infrastructure.configuration.security;
 
-import io.jsonwebtoken.*;
+import io.jsonwebtoken.Claims;
+import io.jsonwebtoken.JwtException;
+import io.jsonwebtoken.Jwts;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -13,29 +16,48 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static com.blog.proyecto_blog.infrastructure.configuration.security.Constans.*;
+import static com.blog.proyecto_blog.infrastructure.configuration.security.Constans.AUTHORIZATION_HEADER;
+import static com.blog.proyecto_blog.infrastructure.configuration.security.Constans.TOKEN_BEARER_PREFIX;
 
 @Component
+@RequiredArgsConstructor
 public class JWTAuthorizationFilter extends OncePerRequestFilter {
 
-    private Claims setSigninKey(HttpServletRequest request) {
-        String jwtToken = request.getHeader(AUTHORIZATION_HEADER).replace(TOKEN_BEARER_PREFIX, "");
-        return Jwts.parser().setSigningKey(getSigningKey(SUPER_SECRET_KEY)).build()
-                .parseClaimsJws(jwtToken).getBody();
+    private final JwtProperties jwtProperties;
+
+    private Claims parseToken(HttpServletRequest request) {
+        String authorizationHeader = request.getHeader(AUTHORIZATION_HEADER);
+        String jwtToken = authorizationHeader.substring(TOKEN_BEARER_PREFIX.length());
+
+        return Jwts.parser()
+                .verifyWith(jwtProperties.signingKey())
+                .requireIssuer(jwtProperties.issuer())
+                .build()
+                .parseSignedClaims(jwtToken)
+                .getPayload();
     }
 
     private void setAuthentication(Claims claims) {
         List<String> authorities = claims.get("authorities", List.class);
-        UsernamePasswordAuthenticationToken auth =
-                new UsernamePasswordAuthenticationToken(claims.getSubject(), null, authorities.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList()));
-        SecurityContextHolder.getContext().setAuthentication(auth);
+
+        UsernamePasswordAuthenticationToken authentication =
+                new UsernamePasswordAuthenticationToken(
+                        claims.getSubject(),
+                        null,
+                        authorities.stream()
+                                .map(SimpleGrantedAuthority::new)
+                                .toList()
+                );
+
+        SecurityContextHolder.getContext().setAuthentication(authentication);
     }
 
-    private boolean isJWTValid(HttpServletRequest request) {
-        String authenticationHeader = request.getHeader(AUTHORIZATION_HEADER);
-        return authenticationHeader != null && authenticationHeader.startsWith(TOKEN_BEARER_PREFIX);
+    private boolean hasBearerToken(HttpServletRequest request) {
+        String authorizationHeader = request.getHeader(AUTHORIZATION_HEADER);
+
+        return authorizationHeader != null
+                && authorizationHeader.startsWith(TOKEN_BEARER_PREFIX);
     }
 
     @Override
@@ -46,20 +68,22 @@ public class JWTAuthorizationFilter extends OncePerRequestFilter {
     ) throws IOException, ServletException {
 
         try {
-            if (isJWTValid(request)) {
-                Claims claims = setSigninKey(request);
+            if (hasBearerToken(request)) {
+                Claims claims = parseToken(request);
 
                 if (claims.get("authorities") != null) {
                     setAuthentication(claims);
                 }
             }
-        } catch ( ExpiredJwtException | UnsupportedJwtException | MalformedJwtException e ) {
-           response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-            response.sendError(HttpServletResponse.SC_FORBIDDEN, e.getMessage());
+        } catch (JwtException | IllegalArgumentException exception) {
+            SecurityContextHolder.clearContext();
+            response.sendError(
+                    HttpServletResponse.SC_UNAUTHORIZED,
+                    "Token inválido o expirado"
+            );
             return;
         }
 
         chain.doFilter(request, response);
     }
-
 }
